[tool.poetry]
name = "cachetools_redis"
version = "0.1.2"
description = ""
authors = ["Anish Padhi <padhi.anish@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^3.5.3"
cachetools = "^4.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
pytest-cov = "^2.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
